results/old/NodeNewEP8.err
src/main.cu(35): error: a value of type "char *" cannot be used to initialize an entity of type "std::__cxx11::string *"
   std::string * ext = strrchr(filename, '.');
                       ^

src/main.cu(38): error: identifier "bin" is undefined
   if(ext == bin ){
             ^

src/main.cu(75): error: identifier "size" is undefined
   unsigned int numPoints = size/sizeof(double)/dim;
                            ^

3 errors detected in the compilation of "src/main.cu".
make: *** [Makefile:29: build/main.o] Error 2
/var/spool/slurm/slurmd/job7722763/slurm_script: line 20: ./build/main: No such file or directory
